--- a/conf/example.cfg
+++ b/conf/example.cfg
@@ -6,3 +6,5 @@ trade.seckey   = "B330466EAD6A412AB5D4D90E15090166"
 tick.interval = 280
 burst.threshold.pct = 0.00005
 burst.threshold.vol = 10
+p.low = 0.44
+p.high = 0.56
