--- a/conf/example.cfg
+++ b/conf/example.cfg
@@ -1,10 +1,10 @@
-account.apikey = "d7c3034a-0f95-249b-a5db-8bc36dd1a583"
-account.seckey = "1290C32FA5AB5ABAD5A9E4FF2065F93E"
-trade.apikey   = "22cf5769-8fe8-2eab-bc3f-8b6a513a669e"
-trade.seckey   = "B330466EAD6A412AB5D4D90E15090166"
+account.apikey = "1097848c6-5aba-4dfd-8ca5-c3550dbb9f811"
+account.seckey = "15F6BDC727D97EBAEF5976BB9B1A8CB551"
+trade.apikey   = "1097848c6-5aba-4dfd-8ca5-c3550dbb9f811"
+trade.seckey   = "15F6BDC727D97EBAEF5976BB9B1A8CB551"
 
 tick.interval = 280
-burst.threshold.pct = 0.00005
+burst.threshold.pct = 0.002
 burst.threshold.vol = 10
-p.low = 0.44
-p.high = 0.56
+p.low = 0.05
+p.high = 0.95
