--- a/conf/example.cfg
+++ b/conf/example.cfg
@@ -3,8 +3,18 @@ account.seckey = "15F6BDC727D97EBAEF5976BB9B1A8CB551"
 trade.apikey   = "1097848c6-5aba-4dfd-8ca5-c3550dbb9f811"
 trade.seckey   = "15F6BDC727D97EBAEF5976BB9B1A8CB551"
 
+#bth
 tick.interval = 280
 burst.threshold.pct = 0.002
 burst.threshold.vol = 10
 p.low = 0.05
 p.high = 0.95
+
+
+#lth
+tick.interval = 280
+burst.threshold.pct = 0.002
+burst.threshold.vol = 200
+p.low = 0.05
+p.high = 0.95
+
